@@ -1,6 +1,7 @@
 Revision history for Catalyst-Plugin-Sitemap
 
 {{$NEXT}}
+    - Add Dancer::Plugin::SiteMap in the 'SEE ALSO' section.
 
 0.0.1     2010-09-29 20:19:12 America/Montreal
     - original version unleashed on an unsuspecting world
